--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,10 @@
         <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>org.uncommons</groupId>
+        <groupId>org.testng</groupId>
         <artifactId>reportng</artifactId>
-        <version>1.1.4</version>
+        <version>1.2.2</version>
         <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.google.inject</groupId>
-        <artifactId>guice</artifactId>
-        <version>5.1.0</version>
     </dependency>
 </dependencies>
 
